<resources>
    <string name="app_name">Flaquiz</string>
    <string name="iniciar">Iniciar</string>
    <string name="bandeira_do_brasil">Bandeira do Brasil</string>
    <string name="bandeira_da_india">Bandeira da India</string>
    <string name="bandeira_da_russia">Bandeira da Russia</string>
    <string name="bandeira_da_china">Bandeira da China</string>
    <string name="bandeira_da_africa_do_sul">Bandeira da Africa do Sul</string>
    <string name="brazil">Brasil</string>
    <string name="russia">Russia</string>
    <string name="india">India</string>
    <string name="china">China</string>
    <string name="south_africa">Africa do sul</string>
    <string name="correta">CORRETA</string>
    <string name="incorreta">INCORRETA</string>
    <string name="semOpcaoSelecionada">Selecione uma opção</string>
    <string name="parabens">PARABÉNS</string>
    <string name="tente_novamente">Que pena… \nTente de novo, </string>
    <string name="reiniciar">Menu inicial</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="nome_do_aluno">Gustavo Mota Macedo</string>
    <string name="RGM">30410746</string>
    <string name="encerrar">Encerrar</string>
    <string name="que_pais_e_esse">Que país é esse?</string>
    <string name="iraque">Iraque</string>
    <string name="bandeira_do_iraque">Bandeira do Iraque</string>
    <string name="bandeira_de_madagascar">Bandeira de Madagascar</string>
    <string name="madagascar">Madagascar</string>
    <string name="bandeira_da_mauritania">Bandeira da Mauritânia</string>
    <string name="mauritania">Mauritânia</string>
    <string name="bandeira_do_congo">Bandeira do Congo</string>
    <string name="congo">Congo</string>
    <string name="niger">Níger</string>
    <string name="bandeira_do_niger">Bandeira do Níger</string>
    <string name="responder">Responder</string>
</resources>