<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-79dp"
        tools:layout_editor_absoluteY="-16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="21dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:contentDescription="@string/nome_do_aluno"
                app:srcCompat="@drawable/foto_perfil_aluno" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:gravity="center_vertical"
                    android:text="@string/nome_do_aluno"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:gravity="center_vertical"
                    android:text="@string/RGM" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="96sp" />

        <EditText
            android:id="@+id/edtNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:hint="@string/digite_seu_nome"
            android:inputType="text"
            android:paddingTop="21dp"
            android:paddingBottom="21dp"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnIniciar"
                style="@style/Button.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:onClick="iniciar"
                android:padding="10dp"
                android:text="@string/iniciar" />

            <Button
                android:id="@+id/btnEncerrar"
                style="@style/Button.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:fontFamily="@font/roboto"
                android:padding="10dp"
                android:text="@string/encerrar" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>